fix: Fix MaOption vertical alignment (#373)

--- a/src/components/MaOption/MaOptionCheckbox.css
+++ b/src/components/MaOption/MaOptionCheckbox.css
@@ -4,7 +4,7 @@
 
 .ma-option--checkbox .indicator {
   position: absolute;
-  top: 2px;
+  top: 0;
   left: 0;
   transition: border 0.4s, background-color 0.33s;
   border: 1px solid var(--color-gray-light);
@@ -16,8 +16,7 @@
 .ma-option--checkbox .description {
   /* .indicator is absolute-positioned. We need to make room for the text */
   padding-left: calc(var(--indicator-size) + 0.5rem);
-
-  line-height: 1.3;
+  margin-top: 2px;
   color: var(--color-gray-dark);
 }
 
